--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -22,9 +22,9 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:layout_gravity="center_horizontal"
-            android:padding="24dp"
-            android:background="@drawable/custom_edittext">
-            
+            android:padding="30dp"
+            android:background="@color/white">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -39,10 +39,11 @@
                 android:layout_height="50dp"
                 android:id="@+id/signup_email"
                 android:background="@drawable/custom_edittext"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="35dp"
                 android:padding="8dp"
+                android:textColorHint="@color/background_type"
                 android:hint="Email"
-                android:drawableLeft="@drawable/baseline_person_24"
+                android:drawableLeft="@drawable/baseline_mail_24"
                 android:drawablePadding="8dp"
                 android:textColor="@color/black"/>
             <EditText
@@ -50,12 +51,27 @@
                 android:layout_height="50dp"
                 android:id="@+id/signup_password"
                 android:background="@drawable/custom_edittext"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="15dp"
                 android:padding="8dp"
                 android:hint="Password"
+                android:textColorHint="@color/background_type"
                 android:drawableLeft="@drawable/baseline_lock_24"
                 android:drawablePadding="8dp"
                 android:textColor="@color/black"/>
+
+            <EditText
+                android:id="@+id/signup_pass"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:textColorHint="@color/background_type"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/custom_edittext"
+                android:drawableLeft="@drawable/baseline_lock_24"
+                android:drawablePadding="8dp"
+                android:hint="Confirmar Password"
+                android:padding="8dp"
+                android:textColor="@color/black" />
+
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
@@ -64,18 +80,19 @@
                 android:textSize="19sp"
                 android:layout_marginTop="30dp"
                 android:textColor="@color/white"
+                android:backgroundTint="@color/secondary_dark"
                 app:cornerRadius = "20dp"/>
 
             <TextView
+                android:id="@+id/loginRedirectText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/loginRedirectText"
-                android:text="Ya tienes cuenta? Inicia sesión"
                 android:layout_gravity="center"
-                android:padding="8dp"
                 android:layout_marginTop="10dp"
+                android:padding="8dp"
+                android:text="Ya tienes cuenta? Inicia sesión"
                 android:textColor="@color/black"
-                android:textSize="18sp"/>
+                android:textSize="18sp" />
 
         </LinearLayout>
 
