--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
             android:layout_width="86dp"
             android:layout_height="40dp"
             android:layout_marginLeft="180dp"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/secondary"
             android:drawableLeft="@drawable/baseline_logout_24"
             android:paddingLeft="1dp"
             android:paddingRight="25sp"
