--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,5 @@
     <dimen name="space_loading_4">300dp</dimen>
 
     <dimen name="divider_stroke">1dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
